fixed overlap

--- a/static/portfolio.css
+++ b/static/portfolio.css
@@ -56,8 +56,6 @@ a:hover {
 }
 
 .slideshow-title {
-    position: absolute;
-    top: 15px;
     text-align: center;
     text-decoration: none;
     color: inherit;
@@ -65,9 +63,8 @@ a:hover {
 }
 
 .slideshow-background {
-    padding-top: 45px;
     width: 100%;
-    padding-bottom: 70px;
+    padding-bottom: 20px;
     background-color: #708090;
     box-sizing: border-box;
     position: relative;
@@ -76,9 +73,9 @@ a:hover {
 
 
 .slideshow-container {
-    margin-top: 50px;
+    padding-top: 15px;
     width: 98%;
-    height: 540px;
+    min-height: 540px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -120,11 +117,11 @@ a:hover {
 }
 
 .slideshow-skills {
+    margin-top: -42px;
+    margin-bottom: 5px;
     display: flex;
     justify-content: center;
     width: 100%;
-    position: absolute;
-    top:100px;
     font-size: 15px;
 }
 
@@ -190,11 +187,10 @@ a:hover {
 
 
 .button-container {
+    margin-top: 20px;
     display: flex;
     justify-content: center;
     width: 100%;
-    position: absolute;
-    bottom: 20px;
 }
 
 .prev, .next {
